@@ -64,9 +64,9 @@ S3method(build_criterion,default)
 S3method(build_criterion,list)
 S3method(build_criterion,logical)
 S3method(build_criterion,matrix)
-S3method(by_groups,data.frame)
-S3method(by_groups,data.table)
-S3method(by_groups,default)
+S3method(by_groups_internal,data.frame)
+S3method(by_groups_internal,data.table)
+S3method(by_groups_internal,default)
 S3method(c,labelled)
 S3method(calculate_internal,data.frame)
 S3method(calculate_internal,list)
