@@ -47,9 +47,9 @@ These objects are imported from other packages. Follow the links
 below to see their documentation.
 
 \describe{
-  \item{DT}{\code{\link[DT]{dataTableAjax}}, \code{\link[DT]{dataTableOutput}}, \code{\link[DT]{renderDataTable}}}
-
   \item{data.table}{\code{\link[data.table]{data.table}}, \code{\link[data.table]{as.data.table}}, \code{\link[data.table]{is.data.table}}, \code{\link[data.table]{setDF}}, \code{\link[data.table]{setDT}}, \code{\link[data.table]{setkey}}, \code{\link[data.table]{setkeyv}}, \code{\link[data.table]{fread}}, \code{\link[data.table]{fwrite}}}
+
+  \item{DT}{\code{\link[DT]{dataTableAjax}}, \code{\link[DT]{dataTableOutput}}, \code{\link[DT]{renderDataTable}}}
 
   \item{htmlTable}{\code{\link[htmlTable]{htmlTable}}, \code{\link[htmlTable]{htmlTableWidget}}, \code{\link[htmlTable]{htmlTableWidgetOutput}}, \code{\link[htmlTable]{interactiveTable}}}
 
